# shadow-openenv

./: Dockerfile  README.md  baseline.py  inference.py  openenv.yaml  pyproject.toml
app/: env.py  grader.py  main.py  models.py  tasks.py
server/: app.py
