[project]
name = "shadow-openenv"
version = "0.1.0"
description = "Shadow OpenEnv environment"
authors = [
    {name = "Vivek", email = "your_email@gmail.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entrypoint = "server.app:app"